# VoxelEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/shaders/: b_triangle.frag.hlsl  b_triangle.vert.hlsl  colored_triangle.frag.hlsl  colored_triangle.vert.hlsl  simple_shader.frag.hlsl  simple_shader.vert.hlsl  triangle.frag.glsl  triangle.frag.hlsl  triangle.vert.hlsl
Engine/src/: nk.h  nkpch.cpp  nkpch.h
Engine/src/Core/: Application.cpp  Application.h  Asserts.cpp  Asserts.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  MouseButtonCodes.h  Window.cpp  Window.h
Engine/src/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Core/Rendering/: Device.cpp  Device.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  PipelineBuilder.cpp  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h
Engine/src/Core/Rendering/Old_1/: PipelineBuilder.h  Renderer.cpp
Engine/src/Utilities/: Defines.h  Utils.h
Game/: CMakeLists.txt
Game/src/: game.cpp
